[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphserver"
version = "1.0.0"
description = "Graphserver routing engine."
requires-python = ">=3.7"
license = {text = "BSD"}
authors = [
    {name = "Brandon Martin-Anderson", email = "badhill@gmail.com"}
]
keywords = ["OSM", "OpenStreetMap", "GTFS", "routing", "transit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pytz>=2025.2",
    "Flask>=3.0",
    "rtree>=1.0.0",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "ruff"
]

[project.urls]
Homepage = "http://github.com/bmander/graphserver/tree/master"
Repository = "http://github.com/bmander/graphserver.git"

[project.scripts]
gs = "graphserver.cli:cli"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["examples*", "test*"]

[tool.setuptools.package-data]
graphserver = ["libgraphserver.so"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I"]  # Enable isort import sorting

[tool.ruff.lint.isort]
force-sort-within-sections = true