[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphserver"
version = "2.0.0"
description = "High-performance graph planning engine with Python integration"
authors = [{name = "Graphserver Team"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy>=1.0",
    "ruff",
    "black",
]
osm = [
    "osmium>=4.0.2",
    "shapely>=2.0",
    "pyproj>=3.7",
    "rtree>=1.4.0",
]
transit = [
    "gtfs-kit>=4.0.0",
    "rtree>=1.4.0",
    "pyproj>=3.7",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.source-dir = "."
wheel.expand-macos-universal-tags = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF"]
ignore = [
    "COM812",  # Conflicts with formatter
    "S101",    # Use of assert detected (normal in tests)
    "PLR2004", # Magic value comparisons (common in tests)
    "PLC0415", # Import at top-level (tests often have conditional imports)
    "ARG001",  # Unused function arguments (common in test stubs)
    "TC003",   # Standard library imports in type-checking (Path used at runtime)
    "PLR0913", # Too many arguments (acceptable for provider constructors)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "PLC0415", "ARG001", "T201", "SLF001", "E501"]
"debug_*.py" = ["T201", "SLF001", "E501", "EXE001", "BLE001"]
"minimal_*.py" = ["T201", "SLF001", "E501", "EXE001", "BLE001"]
"examples/*" = ["T201", "S310", "PTH123", "EXE001", "BLE001", "E501", "C901", "PLR0912", "PLR0915", "PTH110", "SLF001"]

[tool.black]
target-version = ["py312"]
line-length = 88